# pmx-osc-proxy

./: meson.build
include/application/: application.h
src/: application.cpp  main.cpp
